--- a/plugin.yml
+++ b/plugin.yml
@@ -7,3 +7,9 @@ api:
 load: STARTUP
 author: Goldish_Kirby
 description: "Automatically loads world on server start"
+
+commands:
+ loadworld:
+  description: "Loads all worlds"
+  usage: "/loadworlds"
+  permission: worldloader.command.loadworld
